[tool.poetry]
name = "layers"
version = "0.1.0"
description = ""
authors = ["sinofseven <em.s.00001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
feedparser = "6.0.10"
beautifulsoup4 = "4.11.1"
requests = "2.28.1"
boto3 = "1.26.8"
boto3-stubs = {version = "1.26.8", extras = ["s3", "dynamodb", "sqs"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
