[tool.poetry]
name = "collection"
version = "0.1.0"
description = ""
authors = ["sinofseven <em.s.00001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
feedparser = "6.0.10"
beautifulsoup4 = "4.11.1"
requests = "2.28.1"
boto3 = "1.26.20"
boto3-stubs = {version = "1.26.20", extras = ["dynamodb", "s3", "sqs"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
